...
          if (!controller.getCameraState()) {
            return Scaffold(
              appBar: AppBar(
                automaticallyImplyLeading: false,
                backgroundColor: theme.colorScheme.primary,
                title: Semantics(
                  identifier: 'save_title_input',
                  child: ScanTitleInput(
                    initialTitle: controller.getTitle(),
                    onTitleChanged: (final String title) {
                      controller.setTitle(title);
                    },
                  ),
...
                              header: LocaleKeys.save_cancel_dialog_header.tr(),
                              notificationText:
                                  LocaleKeys.save_cancel_dialog_body.tr()),
                    ),
                  ),
                  Semantics(
                    identifier: 'save_document_button',
                    child: NavigationButton(
                        buttonText: LocaleKeys.save_navigation_save.tr(),
                        buttonIcon: Icons.save_outlined,
                        onPressed: () {
                          controller.createPDF().then((final pw.Document pdf) {
                            controller.savePDF(pdf.save()).then((final _) {
...
