...
              ),
            ),
            SizedBox(
              height: size.height * 0.012,
            ),
            Semantics(
              identifier: 'scan_camera_button',
              child: ScanCameraButton(
                onAnimationEnd: () {
                  onTakePhoto.call();
                },
              ),
            ),
...
