...
              buttonIcon: Icons.add_outlined,
              onPressed: () => _showCreateCollectionModal(
                  context, controller.createCollection(), controller.goBack),
            ),
          ),
          Semantics(
            identifier: 'scan_document',
            child: NavigationButton(
                buttonText: LocaleKeys.home_scan_document.tr(),
                buttonIcon: Icons.camera_alt_outlined,
                onPressed: () {
                  controller.goToPage(Uri(
                      path: NavigationServiceRoutes.scan,
...
